# rust_os

./: Cargo.toml  README.md
notes/: 01_freestanding_bin  02_minimal_rust_kernel  03_vga_text_mode  04_testing  05_interrupts  06_double_faults  07_hardware_interrutps
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  testing_fns.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs  stacc_overflow.rs
