[package]
name = "rust_os"
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader = "0.9"

# redundant because we added abort on panic in 
# compilation target but for clarity kept it
[profile.dev]
panic = "abort"

# redundant because we added abort on panic in 
# compilation target but for clarity kept it
[profile.release]
panic = "abort"


