[package]
name = "rust_os"
version = "0.1.0"
edition = "2018"

[dependencies]
# to not have to write your own bootloader
bootloader = "0.9"
# self explanatory
volatile = "0.2.6"
# to gain access to spinlock
spin = "0.5.2"
# to gain access to interrupts
x86_64 = "0.14.2"
# to be able to print to serial port and print to console
uart_16550 = "0.2.0"
# to access pic programming
pic8259 = "0.10.1"
# for keyboard scancode matching
pc-keyboard = "0.7.0"

# to have lazy static initialization
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# redundant because we added abort on panic in 
# compilation target but for clarity kept it
[profile.dev]
#panic = "abort"

# redundant because we added abort on panic in 
# compilation target but for clarity kept it
[profile.release]
#panic = "abort"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
        #"-display", "none"]
        ]
test-success-exit-code = 33 # (0x10 << 1) | 1 = 33
test-timeout = 60 # in seconds

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stacc_overflow"
harness = false
